--- a/audio/sass/styles.scss
+++ b/audio/sass/styles.scss
@@ -1,8 +1,10 @@
 $font-titles: 'Futura PT Bold';
 $font-family: 'Proxima Nova Lt';
 $size: 10px;
-$black: #000;
+$black: #252422;
 $gray: #f3f2f1;
+$white: #fff;
+$green: #5bd9b3;
 
 @mixin transition($args...) {
   -webkit-transition: $args;
@@ -43,6 +45,24 @@ h2,h3,h4,h5,h6,p{
   height: 100%;
   overflow: hidden;
   box-sizing: border-box;
+
+
+  &__half{
+    position: relative;
+    float: left;
+    box-sizing: border-box;
+    width: 50%;
+    height: inherit;
+
+    &.black{
+      background-color: $black;
+    }
+
+    &.unback{
+      background: url(../img/hereitcomes.jpg) no-repeat center center;
+      background-size: cover;
+    }
+  }
 }
 
 .initial{
@@ -68,6 +88,7 @@ h2,h3,h4,h5,h6,p{
     top: 50%;
     left: 50%;
     transform: translate(-110%, -50%);
+    @include transition(all .5s ease);
 
     @media (max-width: 560px){
       position: relative;
@@ -77,6 +98,11 @@ h2,h3,h4,h5,h6,p{
       transform: translate(0,0);
       text-align: center;
       padding-top: 4 * $size;
+    }
+
+    &.white{
+      color: $white;
+      @include transition(all .5s ease);
     }
   }
 
@@ -117,6 +143,18 @@ h2,h3,h4,h5,h6,p{
       opacity: 1;
       @include transition(all .5s ease);
     }
+
+    .initial__contents.white{
+      .initial__desc{
+        opacity: 1;
+        @include transition(all .5s ease);
+
+              &:before{
+                border-color: $white;
+                @include transition(all .5s ease .5s);
+              }
+      }
+    }
   }
 
   .container__svg{
@@ -146,9 +184,67 @@ h2,h3,h4,h5,h6,p{
       stroke-width: 2;
       width: 100%;
       max-height: 100%;
+      @include transition(all .5s ease);
+
+      &.white{
+        stroke: $white;
+        stroke-width: 3;
+        @include transition(all .5s ease);
+      }
     }
 
   }
 
 
+}
+
+.background{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../img/hereitcomes.jpg) no-repeat center center;
+  background-size: cover;
+  opacity: 0;
+  @include transition(all .5s ease);
+
+  &.white{
+      opacity: 1;
+      @include transition(all .5s ease);
+  }
+}
+
+header{
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 8 * $size;
+  line-height: 8 * $size;
+  transform: translateY(-100%);
+  @include transition(all .5s ease);
+  z-index: 1200;
+  color: $white;
+
+  h1{
+    font-size: 4 * $size;
+    padding: 0 3 * $size;
+    line-height: inherit;
+
+    span.normalText{
+      display: inline-block;
+      font-family: $font-family;
+      font-size: 1.8 * $size;
+      text-transform: uppercase;
+      line-height: inherit;
+      margin-left: 0.6 * $size;
+      vertical-align: middle;
+    }
+  }
+
+  &.visible{
+    transform: translateY(0);
+    @include transition(all .5s ease);
+  }
 }
